# STM32_LoRa_V3.1

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Linker.ld  README.md  STM32_LoRa_v3.1.code-workspace  Startup.s  arm-none-eabi-gcc.cmake
BootLib/: system_select.c  system_select.h
CMSIS_L431/Startup/: Debug_STM32L431RB_FLASH.ld  Linker_800.ld  Linker_801.ld  startup_stm32l431rbtx.s
CMSIS_L431/inc/: stm32l431xx.h  stm32l4xx.h
Cortex/inc/: delay.h  dwt.h  fifo.h  formating_output.h  low_power.h
Cortex/src/: delay.c  dwt.c  formating_output.c  low_power.c
ExternalDevices/Inc/: LoRa.h  buzzer.h  ds18b20.h  ds18b20_bus.h  gsm.h  radio_protocol.h  sx126x.h  sx126x_misc.h  sx127x.h  sx127x_misc.h  tmp1075.h
ExternalDevices/src/: LoRa.c  buzzer.c  ds18b20.c  ds18b20_bus.c  gsm.c  sx126x.c  sx126x_misc.c  sx1278.c  sx127x.c  sx127x_misc.c  tmp1075.c
FAT_FS/: diskio.c  ff.c  ffconf.h
FreeRTOS/inc/: FreeRTOSConfig.h  stdint.h
FreeRTOS/src/: port.c
Main/Inc/: System.h  action_task.h  cli.h  global_variables.h  lua_misc.h  main.h  monitor_task.h  periph_handlers.h  system_config.h
Main/src/: System.c  action_task.c  cli.c  gloabal_variables.c  lua_misc.c  lua_test.c  main.c  monitor_task.c  periph_hendlers.c  system_config.c
Middleware/inc/: fat32.h  fat32_file.h  json.h  logging.h  mbr.h  xprintf.h
Middleware/src/: fat32.c  fat32_file.c  json.c  logging.c  xprintf.c
Pawn/: amx.c  amxfuncs.c  amxfuncs.h  pawn.c  pawnconf.h
Periph/inc/: adc.h  flash.h  gpio.h  i2c.h  iwdg.h  l431_gpio_alt_func.h  one_wire.h  pwm.h  rcc.h  rtc.h  sdio.h  spi.h  tim.h  uart.h  wwdg.h
Periph/src/: adc.c  flash.c  gpio.c  i2c.c  iwdg.c  one_wire.c  pwm.c  rcc.c  rtc.c  sdio.c  spi.c  tim.c  uart.c  wwdg.c
SEGGER/: SYSVIEW.c  SYSVIEW.h  SYSVIEW_ConfDefaults.h  SYSVIEW_Int.h
SEGGER/Config/: RTT_Conf.h  SYSVIEW_Config_FreeRTOS.c
SEGGER/OS/: SYSVIEW_FreeRTOS.c  SYSVIEW_FreeRTOS.h
SEGGER/RTT/: RTT.c  RTT.h  RTT_ASM_ARMv7M.S  RTT_Syscalls_GCC.c  RTT_printf.c
XModem/: xmodem.c  xmodem.h
console/inc/: config.h  console_utils.h  microrl.h  sensors_task.h  stm32_misc.h
console/src/: console_utils.c  microrl.c  sensors_task.c  stm32_misc.c
console_utils/: dump_mem.c  help.c  ls.c  neofetch.c
fat32_old/: fat32.c  fat32.h  fat32_file.h  fat32_status.h  string_utils.c  string_utils.h
lua-5.4.7/: lua_stm32.c
lua-5.4.7/src/: ljumptab.h  llimits.h  lua.h  luac.c
